tkg_tmc_to/cluster-1/sample-app/blue/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: test
    version: v2
  name: test-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
      version: v2
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test
        version: v2
    spec:
      containers:
        # user later
        - image: yogendra/tmc-cluster-autoscaler:1e29f3d
          name: test
          ports:
            - name: http
              containerPort: 5000
