tkg_tmc_to/cluster-1/sample-app/blue/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: test
    version: v2
  name: test-blue
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
  selector:
    app: test
    version: v2
